k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: reporting-engine
  labels:
    name: reporting-engine
